Limit search results height to prevent screen overflow

--- a/assets/scss/frontend/_search_banner.scss
+++ b/assets/scss/frontend/_search_banner.scss
@@ -193,6 +193,7 @@ form.ezd_search_form {
 
 #ezd-search-results {
 	padding: 0;
+	padding-right: 8px;
 	border: none;
 	position: absolute;
 	width: 100%;
@@ -205,6 +206,30 @@ form.ezd_search_form {
 	transition: all 0.4s;
 	z-index: 99;
 	top: calc(100% - 0px);
+	max-height: 100vh;
+    overflow-y: auto;
+
+	// Custom scrollbar styling
+    &::-webkit-scrollbar {
+        width: 8px;
+    }
+    
+    &::-webkit-scrollbar-track {
+        background: transparent;
+        border-radius: 10px;
+    }
+    
+    &::-webkit-scrollbar-thumb {
+        background: rgba(0, 0, 0, 0.2);
+        border-radius: 10px;
+    }
+    
+    &::-webkit-scrollbar-thumb:hover {
+        background: rgba(0, 0, 0, 0.3);
+    }
+	
+	scrollbar-width: thin;
+    scrollbar-color: rgba(0, 0, 0, 0.2) transparent;
 
 	a {
 		text-decoration: none;
